--- a/styles/style.css
+++ b/styles/style.css
@@ -113,14 +113,41 @@ hr{
  }
  .course-duration{
      background-color: #FEE5DF;
+     border: 1px solid pink;
      border-radius: 15px;
      width: 95px;
      height: 30px;
      padding-left: 25px;
      padding-top: 5px;
+     color: #FF4A60;
 
  }
-.fa-clock{
-    color: red;
+
+
+/* media queries */
+
+/* mobile device */
+
+@media only screen and (max-width:688px) {
+    .container{
+        width: 100%;
+    }
+    .players, .blogs, .courses{
+        /* background-color: red; */
+        grid-template-columns: repeat(1, 1fr);
+    }
+    .player, .blog{
+        flex-direction: column;
+    }
+    
 }
 
+/* tablet devices */
+@media only screen and(min-width:688px) and (max-width:992px) {
+       .container{
+           width: 100%;
+       }
+       .blogs{
+          grid-template-columns: repeat(2, 1fr);
+       }
+}
